2007-05-25  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: synced --libs output with the pkg-config files.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_object.[ch]: applied patch from Kevin
	Hurewitz that adds keyboard control for resizing an area (bug #439226).

2007-05-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-display.c (pygimp_display_new): return None
	if we're passed an ID of -1, like the other GIMP object constructors.

2007-05-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-display.c: remove the delete method, PyGimp
	objects are supposed to be deleted via gimp.delete()

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]
	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.c
	* app/widgets/gimpsessioninfodockable.[ch]: cleanup.

2007-05-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/pygimp-display.c: added an ID attribute and a
	delete method to the Gimp.Display object.

	* plug-ins/pygimp/gimpshelf.py (_display_id): use the ID attribute.

	* plug-ins/pygimp/gimpfu.py: enabled support for PF_DISPLAY.

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]: removed more code and cleaned
	up the API.

	* app/widgets/Makefile.am
	* app/widgets/gimpsessioninfodock.[ch]: added the removed code here.

	* app/widgets/gimpdialogfactory.c: changed accordingly.

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]: removed lots of code...

	* app/widgets/Makefile.am
	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodockable.[ch]: ...and added it here.
	Also allocate all structs using GSLice.

	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdialogfactory.c
	* app/widgets/gimpdocked.c